--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "rollup-plugin-node-resolve": "^3.0.0"
   },
   "peerDependencies": {
-    "md-core": ">=0.0.2-alpha.2 <2"
+    "md-core": "0.0.2"
   }
 }
