--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "rollup-plugin-node-resolve": "^3.3.0"
   },
   "peerDependencies": {
-    "md-core": "0.0.4"
-  },
-  "dependencies": {
-    "highlight.js": "^9.12.0"
+    "md-core": "~1.0",
+    "highlight.js": "~9.0"
   }
 }
