--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "clean": "rm -rf ./dist/*",
     "build": "npm run clean & rollup -c",
-    "test": "mocha --compilers js:babel-core/register",
+    "test": "ava",
     "prepublishOnly": "npm test; npm run build",
-    "precommit": "npm test"
+    "precommit": "npm test",
+    "premili:upgrade": "npm install mili@latest -D",
+    "mili:upgrade": "mili upgrade"
   },
   "keywords": [
     "markdown",
@@ -26,14 +28,20 @@
     "url": "https://github.com/Val-istar-Guo/md-plugins-vig/issues"
   },
   "homepage": "https://github.com/Val-istar-Guo/md-plugins-vig#readme",
+  "mili": {
+    "type": "component",
+    "encoding": "utf8"
+  },
   "devDependencies": {
+    "ava": "^1.0.0-beta.4",
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1",
-    "rollup": "^0.57.1",
+    "babel-register": "^6.26.0",
+    "husky": "^0.14.3",
+    "mili": "0.0.2-alpha.1",
+    "rollup": "^0.58.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0"
@@ -41,5 +49,23 @@
   "peerDependencies": {
     "md-core": ">= 1.2.0 < 2",
     "highlight.js": "~9"
-  }
+  },
+  "engines": {
+    "node": ">=8.9.4"
+  },
+  "ava": {
+    "files": [
+      "test/**/*.js",
+      "!**/macros.js",
+      "!**/*.macros.js"
+    ],
+    "sources": [
+      "src/**/*.js"
+    ],
+    "failFast": true,
+    "require": [
+      "babel-register"
+    ]
+  },
+  "dependencies": {}
 }
