--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-plugins-vig",
   "version": "1.2.3",
   "description": "markdown parse",
-  "main": "dist/bundle.js",
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf ./dist/*",
     "build": "npm run clean & rollup -c",
