--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "husky": "^0.14.3",
-    "mili": "0.0.2-alpha.1",
+    "mili": "0.0.2",
     "rollup": "^0.58.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
