--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-plugins-vig",
-  "version": "1.2.4",
+  "version": "2.0.0-alpha.1",
   "description": "markdown parse",
   "main": "dist/index.js",
   "scripts": {
@@ -40,10 +40,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "husky": "^0.14.3",
-    "mili": "0.0.2",
+    "mili": "0.0.3",
     "rollup": "^0.58.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0"
   },
   "peerDependencies": {
