--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-plugins-vig",
-  "version": "2.0.0-alpha.3",
+  "version": "2.0.0",
   "description": "markdown parse",
   "main": "dist/bundle.js",
   "scripts": {
